--- a/abiSnip/abiSnip.vcxproj
+++ b/abiSnip/abiSnip.vcxproj
@@ -155,7 +155,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="abiSnip.h" />
-    <ClInclude Include="Resource.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="abiSnip.cpp" />
